--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://i.redd.it/1uhq90mr9xq31.jpg" alt="Elon teacher meme">
+  <img src="https://i.redd.it/joincn6hyor31.png" alt="students drinking beer in class" title="Come Have a beer">
 </body>
 </html>
