--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img 
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="male lion roaring">
+  <img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="male lion roaring" title="lion in natural habitat">
+ 
+ 
 
 </body>
 </html>
