--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion is roaring">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion is roaring" title="Lion Roar">
 </body>
 </html>
