--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  <img src="../images/my_company_logo.png">
+    <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion">
+  <img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
+  <img src="../images/my_company_logo.png">
 </body>
 </html>
