--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 
   <!-- Your code here -->
 
+<!--<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A Roaring Lion" title="This is a Lion">-->
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A Roaring Lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A Roaring Lion" title="This is a Lion">
+
 </body>
 </html>
